--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name" : "Toolkit Swiss",
-  "version" : "0.1",
-  "description" : "Toolkit for my researches. The main goal it`s to make the research faster. Tried to build it in way that I easily add new modules.",
-  "icons": {"16": "image/icon_16.png", "32": "image/icon_32.png", "48": "image/icon_48.png"}, //IconFinder - Author:	Zlatko Najdenovski
+  "name" : "ToolKit Swiss",
+  "version" : "0.2",
+  "description" : "ToolKit for my researches.",
+  "icons": {"16": "image/icon_16.png", "32": "image/icon_32.png", "48": "image/icon_48.png"}, /*IconFinder - Author:	Zlatko Najdenovski*/
   "background":{
     "scripts": ["js/types.js", "toolkit.js"]
   },  
