--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,13 @@
   "name" : "ToolKit Swiss",
   "version" : "0.2",
   "description" : "ToolKit for my researches.",
-  "icons": {"16": "image/icon_16.png", "32": "image/icon_32.png", "48": "image/icon_48.png"}, /*IconFinder - Author:	Zlatko Najdenovski*/
+  "icons": { /*IconFinder - Author:	Zlatko Najdenovski*/
+    "16": "assets/icons/icon_16.png",
+    "32": "assets/icons/icon_32.png",
+    "48": "assets/icons/icon_48.png"
+  },
   "background":{
-    "scripts": ["js/types.js", "toolkit.js"]
+    "scripts": ["js/core/types.js", "toolkit.js"]
   },  
   "permissions": [
     "contextMenus",
